<resources>
    <string name="app_name">CalculadoraModelo</string>
    <string name="visor1">VisorPrincipal</string>
    <string name="visor2">VisorAuxilar</string>
    <string name="clear_text">AC</string>
    <string name="ab_parentesis">(</string>
    <string name="fec_parentesis">)</string>
    <string name="multiplic">*</string>
    <string name="divide">/</string>
    <string name="subtracao">-</string>
    <string name="soma">+</string>
    <string name="ponto">.</string>
    <string name="igual">=</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>3
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="sin">Seno</string>
    <string name="cos">Coseno</string>
    <string name="tan">Tan</string>
    <string name="ln">ln(x)</string>
    <string name="eqgrau2">EqGrau2</string>
    <string name="eqgrau3">EqGrau3</string>
    <string name="backspace">backspace</string>
    <string name="lambert">Lambert</string>
    <string name="sqrt">SQRT</string>
    <string name="voltar">Back</string>
    <string name="indiceA">index_A</string>
    <string name="indiceB">index_B</string>
    <string name="indiceC">index_C</string>
    <string name="indiceD">index_D</string>
    <string name="grafico">Graphic</string>
    <string name="help">Help</string>
    <string name="help2">help</string>
    <string name="calcular">Calcular</string>
    <string name="sinal">+/-</string>
    <string name="exp">e^(x)</string>
    <string name="exit">Exit</string>
    <string name="fun_o_w_de_lambert">Função W de Lambert</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>